crates/cuda-macros/tests/compile_fail/kernel_scope_unknown_argument.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

use cuda_device::kernel;

#[kernel(context = launch)]
pub fn unknown() {}

fn main() {}
