crates/cuda-macros/tests/compile_fail/kernel_scope_unknown_argument.stderr
error: unknown #[kernel] named argument `context`; expected `scope = IDENT`
 --> tests/compile_fail/kernel_scope_unknown_argument.rs:6:10
  |
6 | #[kernel(context = launch)]
  |          ^^^^^^^
